<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="25dp"
    android:id="@+id/root_view_for_snackbar"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_to_spoof"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spoofs_build_and_features" />

            </LinearLayout>

            <Spinner
                android:id="@+id/device_spoofer_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/spoof_only_in_google_photos_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spoof_only_in_google_photos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spoof_only_in_google_photos_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/force_stop_google_photos"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:text="@string/force_stop_google_photos" />

        <Button
            android:id="@+id/open_google_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:text="@string/open_google_photos" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/update_available_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/update_available"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:visibility="gone" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/reset_wm_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:text="@string/reset_wm_density" />

        <TextView
            android:id="@+id/telegram_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/telegram_group"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

    </LinearLayout>

</ScrollView>